dynamically rendering individual post from home page

--- a/html/post.html
+++ b/html/post.html
@@ -17,9 +17,9 @@
                     <a href="index.html">Back</a>
                 </div>
                 <div class="post__container">
-                    <div id="individual-post-title">This is title</div>    
-                    <div id="individual-post-date">Nov 10</div> 
-                    <div id="individual-post-content">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by</div>        
+                    <div id="individual-post-title"></div>    
+                    <div id="individual-post-date"></div> 
+                    <div id="individual-post-content"></div>        
                 </div>
             </div>
         </div>
@@ -31,6 +31,6 @@
 
 
 
-    <script src="./js/post.js" async defer></script>
+    <script src="../js/post.js" defer></script>
 </body>
 </html>
