--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="home__page">
     <div class="add__post">
-        <a href="post.html">
+        <a href="new-post.html">
             <div class="nav__button newPost__button">+</div>
         </a>
     </div>
@@ -30,14 +30,6 @@
     <footer>
         copyright &copy; Supriya Thapa 
     </footer>
-
-
-
-
-
-
-
-
 
     <script src="../js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
